// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/image-picker/demo/accept.md correctly 1`] = `
<div>
  <div
    class="am-image-picker"
  >
    <div
      class="am-image-picker-list"
      role="group"
    >
      <div
        class="am-flexbox am-flexbox-align-center"
      >
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg);transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg);transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            aria-label="Choose and add image"
            class="am-image-picker-item am-image-picker-upload-btn"
            role="button"
          >
            <input
              accept="image/gif,image/jpeg,image/jpg,image/png"
              type="file"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/image-picker/demo/basic.md correctly 1`] = `
<div
  class="am-wingblank am-wingblank-lg"
>
  <div
    class="am-segment"
    role="tablist"
  >
    <div
      aria-disabled="false"
      aria-selected="true"
      class="am-segment-item am-segment-item-selected"
      role="tab"
      style="color:#fff;background-color:;border-color:"
    >
      <div
        class="am-segment-item-inner"
      />
      切换到单选
    </div>
    <div
      aria-disabled="false"
      aria-selected="false"
      class="am-segment-item"
      role="tab"
      style="color:;background-color:transparent;border-color:"
    >
      <div
        class="am-segment-item-inner"
      />
      切换到多选
    </div>
  </div>
  <div
    class="am-image-picker"
  >
    <div
      class="am-image-picker-list"
      role="group"
    >
      <div
        class="am-flexbox am-flexbox-align-center"
      >
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg);transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg);transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            aria-label="Choose and add image"
            class="am-image-picker-item am-image-picker-upload-btn"
            role="button"
          >
            <input
              accept="image/*"
              type="file"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/image-picker/demo/custom.md correctly 1`] = `
<div>
  <div
    class="am-image-picker"
  >
    <div
      class="am-image-picker-list"
      role="group"
    >
      <div
        class="am-flexbox am-flexbox-align-center"
      >
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg);transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg);transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            aria-label="Choose and add image"
            class="am-image-picker-item am-image-picker-upload-btn"
            role="button"
          >
            <input
              accept="image/*"
              type="file"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/image-picker/demo/grids.md correctly 1`] = `
<div>
  <div
    class="am-list"
  >
    <div
      class="am-list-body"
    >
      <div
        checked=""
        class="am-list-item am-radio-item am-list-item-middle"
      >
        <div
          class="am-list-line"
        >
          <div
            class="am-list-content"
          >
            3*3 Grids
          </div>
          <div
            class="am-list-extra"
          >
            <label
              class="am-radio-wrapper"
            >
              <span
                class="am-radio am-radio-checked"
              >
                <input
                  checked=""
                  class="am-radio-input"
                  type="radio"
                />
                <span
                  class="am-radio-inner"
                />
              </span>
            </label>
          </div>
        </div>
        <div
          class="am-list-ripple"
          style="display:none"
        />
      </div>
      <div
        class="am-list-item am-radio-item am-list-item-middle"
      >
        <div
          class="am-list-line"
        >
          <div
            class="am-list-content"
          >
            4*4 Grids
          </div>
          <div
            class="am-list-extra"
          >
            <label
              class="am-radio-wrapper"
            >
              <span
                class="am-radio"
              >
                <input
                  class="am-radio-input"
                  type="radio"
                />
                <span
                  class="am-radio-inner"
                />
              </span>
            </label>
          </div>
        </div>
        <div
          class="am-list-ripple"
          style="display:none"
        />
      </div>
      <div
        class="am-list-item am-radio-item am-list-item-middle"
      >
        <div
          class="am-list-line"
        >
          <div
            class="am-list-content"
          >
            5*5 Grids
          </div>
          <div
            class="am-list-extra"
          >
            <label
              class="am-radio-wrapper"
            >
              <span
                class="am-radio"
              >
                <input
                  class="am-radio-input"
                  type="radio"
                />
                <span
                  class="am-radio-inner"
                />
              </span>
            </label>
          </div>
        </div>
        <div
          class="am-list-ripple"
          style="display:none"
        />
      </div>
    </div>
  </div>
  <div
    class="am-image-picker"
    style="width:calc(3*(25% + 1.25px) - 5px)"
  >
    <div
      class="am-image-picker-list"
      role="group"
    >
      <div
        class="am-flexbox am-flexbox-align-center"
      >
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(https://zos.alipayobjects.com/rmsportal/PZUUCKTRIHWiZSY.jpeg);transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            class="am-image-picker-item"
          >
            <div
              aria-label="Click and Remove this image"
              class="am-image-picker-item-remove"
              role="button"
            />
            <div
              aria-label="Image can be clicked"
              class="am-image-picker-item-content"
              role="button"
              style="background-image:url(https://zos.alipayobjects.com/rmsportal/hqQWgTXdrlmVVYi.jpeg);transform:rotate(0deg)"
            />
          </div>
        </div>
        <div
          class="am-flexbox-item"
        >
          <div
            aria-label="Choose and add image"
            class="am-image-picker-item am-image-picker-upload-btn"
            role="button"
          >
            <input
              accept="image/gif,image/jpeg,image/jpg,image/png"
              type="file"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
